[B]Version 1.2.6[/B]
    * Fixed problems with nightly version of JDownloader
    * Fixed empty list in 'finished packages' sub menu
    * Rearranged package information in package list view (<percentage> (- <eta>) | <title> | <size>)

[B]Version 1.2.5[/B]
    * Added new actions to user interface: 'Enable/Disable reconnect', 'Enable/Disable premium'
    * Added new action to plugin interface: 'Reconnect'

[B]Version 1.2.4[/B]
    * Initial release for eden-pre

[B]Version 1.0.4[/B]
    * Added new features: use hostname, use fall back connection
    * Fixed quoting problem

[B]Version 1.0.3[/B]
    * Fixed problem with adding unquoted urls

[B]Version 1.0.2[/B]
    * Added spanish translation (thanks to yowill)
    * Added new actions: 'Add links from textfile', 'Add link container', 'Reconnect router'

[B]Version 1.0.1[/B]
    * Changed license to GPL v3
    * Uses notifications instead of dialogs for messages
    * Improved interface for other addons

[B]Version 1.0.0[/B]
    * Added German translation
    * Handle 'failed connection' error

[B]Version 0.1.1[/B]
    * Fixed Bug: Only the first package was listed

[B]Version 0.1.0[/B]
    * Initial release